8b161aa Added another Spacing fix

--- a/src/06-components/molecules/expandable-box/expandable-box.scss
+++ b/src/06-components/molecules/expandable-box/expandable-box.scss
@@ -60,6 +60,7 @@
 
     &:after {
       @include rotating-arrow('down');
+      margin-left: $L;
     }
 
     @include mqmin($viewportM) {
